--- a/environments/echis/app-processes.yml
+++ b/environments/echis/app-processes.yml
@@ -9,6 +9,16 @@ celery_processes:
  #   repeat_record_queue:
  #   async_restore_queue:
   echis_server0:
+    ils_gateway_sms_queue:
+      # Use 1 worker with concurrency 8 in order to enforce the
+      # restriction of having 8 max simultaneous connections with
+      # the push sms gateway
+      pooling: gevent
+      concurrency: 8
+    logistics_reminder_queue:
+      concurrency: 2
+    logistics_background_queue:
+      concurrency: 2
     send_report_throttled:
       concurrency: 2
     async_restore_queue:
