echis_server2: celery VM added

--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -16,6 +16,9 @@ kafka_broker_id=0
 postgresql_replication_slots=['standby','spare']
 hot_standby_server='172.19.3.41'
 
+[echis_server2]
+172.19.0.240 hostname="echis2"
+
 [proxy:children]
 echis_server0
 
@@ -38,7 +41,6 @@ echis_server0
 
 [redis:children]
 echis_server1
-echis_server0
 
 [zookeeper:children]
 echis_server1
@@ -53,6 +55,7 @@ echis_server0
 # background tasks
 [celery:children]
 echis_server0
+echis_server2
 
 # change / stream processors
 [pillowtop:children]
