--- a/environments/echis/app-processes.yml
+++ b/environments/echis/app-processes.yml
@@ -5,25 +5,7 @@ gunicorn_workers_factor: 0
 gunicorn_workers_static_factor: 6
 
 celery_processes:
- # None:
- #   repeat_record_queue:
- #   async_restore_queue:
   echis_server0:
-    ils_gateway_sms_queue:
-      # Use 1 worker with concurrency 8 in order to enforce the
-      # restriction of having 8 max simultaneous connections with
-      # the push sms gateway
-      pooling: gevent
-      concurrency: 8
-    logistics_reminder_queue:
-      concurrency: 2
-    logistics_background_queue:
-      concurrency: 2
-    send_report_throttled:
-      concurrency: 2
-    async_restore_queue:
-#      num_workers: 4
-      concurrency: 2
     repeat_record_queue:
       pooling: gevent
 #      num_workers: 5
@@ -31,12 +13,6 @@ celery_processes:
     sumologic_logs_queue:
       pooling: gevent
       concurrency: 20
-    celery,export_download_queue,email_queue,case_import_queue:
-      concurrency: 16
-      max_tasks_per_child: 5
-    background_queue,case_rule_queue,analytics_queue:
-      concurrency: 10
-      max_tasks_per_child: 5
     beat: {}
     celery_periodic:
       concurrency: 4
@@ -56,13 +32,32 @@ celery_processes:
     reminder_rule_queue:
       concurrency: 3
       max_tasks_per_child: 3
-    ucr_indicator_queue,ucr_queue:
-      concurrency: 16 
-      max_tasks_per_child: 5
     sms_queue:
       pooling: gevent
       concurrency: 5
     flower: {}
+  echis_server2:
+    ucr_indicator_queue,ucr_queue:
+      concurrency: 16
+      max_tasks_per_child: 50
+    celery,export_download_queue,email_queue,case_import_queue:
+      concurrency: 16
+      max_tasks_per_child: 50
+    background_queue,case_rule_queue,analytics_queue:
+      concurrency: 10
+      max_tasks_per_child: 50
+    ils_gateway_sms_queue:
+      pooling: gevent
+      concurrency: 10
+    logistics_reminder_queue:
+      concurrency: 10
+    logistics_background_queue:
+      concurrency: 10
+    send_report_throttled:
+      concurrency: 10
+    async_restore_queue:
+      concurrency: 10
+
 pillows:
   echis_server0:
     AppDbChangeFeedPillow:
