--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -3,6 +3,7 @@
 
 [echis_server0:vars]
 public_ip=213.55.85.203
+kafka_broker_id=1
 replication_slot='standby'
 hot_standby_master='172.19.3.40'
 elasticsearch_node_name=es0
