--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -17,8 +17,19 @@ kafka_broker_id=0
 postgresql_replication_slots=['standby','spare']
 hot_standby_server='172.19.3.41'
 
+[echis_server2:vars]
+elasticsearch_node_name=es2
+kafka_broker_id=2
+
 [echis_server2]
-172.19.0.240 hostname="echis2"
+172.19.4.38 hostname="echis2"
+
+[echis_server3:vars]
+elasticsearch_node_name=es3
+kafka_broker_id=3
+
+[echis_server3]
+172.19.4.39 hostname="echis3"
 
 [proxy:children]
 echis_server0
@@ -35,7 +46,8 @@ echis_server0
 [couchdb2:children]
 echis_server0
 echis_server1
-
+echis_server2
+echis_server3
 # nginx
 [couchdb2_proxy:children]
 echis_server0
@@ -49,6 +61,8 @@ echis_server1
 [kafka:children]
 echis_server1
 echis_server0
+echis_server2
+echis_server3
 
 [rabbitmq:children]
 echis_server0
@@ -56,19 +70,21 @@ echis_server0
 # background tasks
 [celery:children]
 echis_server0
-echis_server2
+echis_server3
 
 # change / stream processors
 [pillowtop:children]
 echis_server0
+echis_server2
 
-# web apps
 [formplayer:children]
 echis_server0
 
 [elasticsearch:children]
 echis_server0
 echis_server1
+echis_server2
+echis_server3
 
 # NFS drive
 [shared_dir_host:children]
