--- a/environments/echis/app-processes.yml
+++ b/environments/echis/app-processes.yml
@@ -5,88 +5,51 @@ gunicorn_workers_factor: 0
 gunicorn_workers_static_factor: 6
 
 celery_processes:
-  echis_server0:
+  None:
+    repeat_record_queue:
+    async_restore_queue:
+  echis_server3: 
     beat: {}
     flower: {}
-    export_download_queue:
-      concurrency: 5
-    email_queue:
-      pooling: gevent
-      concurrency: 50
-      num_workers: 2
-    case_import_queue:
-      concurrency: 4
-    celery:
-      concurrency: 4
-    saved_exports_queue:
-      concurrency: 3
-      max_tasks_per_child: 3
-      concurrency: 1
-      optimize: True
-  echis_server3:
-    saved_exports_queue:
-      concurrency: 3
-      max_tasks_per_child: 3
-      concurrency: 1
-      optimize: True
+    celery,export_download_queue,email_queue,case_import_queue:
+      concurrency: 10
+    background_queue,case_rule_queue,analytics_queue:
+      concurrency: 10
     celery_periodic:
-      concurrency: 4
+      concurrency: 2
+    saved_exports_queue:
+      concurrency: 2
+      optimize: True
     submission_reprocessing_queue:
-      concurrency: 3
+      concurrency: 2
     reminder_case_update_queue:
       pooling: gevent
-      concurrency: 3
+      concurrency: 5
     reminder_queue:
       pooling: gevent
       concurrency: 5
-    reminder_rule_queue:
-      concurrency: 3
-      max_tasks_per_child: 3
+    reminder_rule_queue,ucr_indicator_queue,ucr_queue:
+      concurrency: 10
     sms_queue:
       pooling: gevent
-      concurrency: 5
-    sumologic_logs_queue:
-      pooling: gevent
-      concurrency: 20
-    repeat_record_queue:
-      pooling: gevent
-      num_workers: 5
-      concurrency: 20
-    ucr_indicator_queue,ucr_queue:
-      concurrency: 16
-      max_tasks_per_child: 50
-    background_queue,case_rule_queue,analytics_queue:
       concurrency: 10
-      max_tasks_per_child: 50
-    ils_gateway_sms_queue:
-      pooling: gevent
-      concurrency: 10
-    logistics_reminder_queue:
-      concurrency: 10
-    logistics_background_queue:
-      concurrency: 10
-    send_report_throttled:
-      concurrency: 10
-    async_restore_queue:
-      concurrency: 10
-
 pillows:
   echis_server0:
     CacheInvalidatePillow:
-      num_processes: 3
+      num_processes: 6
     DefaultChangeFeedPillow:
-      num_processes: 5
+      num_processes: 10
     GroupPillow:
-      num_processes: 2
+      num_processes: 1
     GroupToUserPillow:
-      num_processes: 2
+      num_processes: 1
     SqlSMSPillow:
-      num_processes: 2
+      num_processes: 1
   echis_server2:
     UnknownUsersPillow:
       num_processes: 2
     UpdateUserSyncHistoryPillow:
-      num_processes: 2
+      num_processes: 1
     UserCacheInvalidatePillow:
       num_processes: 2
     UserGroupsDbKafkaPillow:
@@ -94,24 +57,24 @@ pillows:
     UserPillow:
       num_processes: 2
     AppDbChangeFeedPillow:
-      num_processes: 5
+      num_processes: 10
     FormSubmissionMetadataTrackerPillow:
-      num_processes: 5
+      num_processes: 4
     ApplicationToElasticsearchPillow:
-      num_processes: 5
+      num_processes: 3
     CaseToElasticsearchPillow:
-      num_processes: 5
+      num_processes: 10
     DomainDbKafkaPillow:
-      num_processes: 5
+      num_processes: 10
     KafkaDomainPillow:
-      num_processes: 5
+      num_processes: 6
     XFormToElasticsearchPillow:
-      num_processes: 5
+      num_processes: 3
     kafka-ucr-static:
-      num_processes: 5
+      num_processes: 10
     kafka-ucr-main:
-      num_processes: 5
+      num_processes: 10
     CaseSearchToElasticsearchPillow:
-      num_processes: 2
+      num_processes: 10
     LedgerToElasticsearchPillow:
-      num_processes: 2
+      num_processes: 1
