--- a/environments/echis/app-processes.yml
+++ b/environments/echis/app-processes.yml
@@ -5,36 +5,65 @@ gunicorn_workers_factor: 0
 gunicorn_workers_static_factor: 6
 
 celery_processes:
-  None:
-    repeat_record_queue:
-    async_restore_queue:
   echis_server3: 
     beat: {}
     flower: {}
-    celery,export_download_queue,email_queue,case_import_queue:
-      concurrency: 10
-    background_queue,case_rule_queue,analytics_queue:
+    export_download_queue:
+      concurrency: 5
+    email_queue:
+      pooling: gevent
+      concurrency: 100
+      num_workers: 2
+    case_import_queue:
+      concurrency: 4
+    celery:
+      concurrency: 4
+    background_queue:
+      concurrency: 8
+    case_rule_queue:
+      concurrency: 4
+    analytics_queue:
+      pooling: gevent
       concurrency: 10
     celery_periodic:
-      concurrency: 2
+      concurrency: 1
     saved_exports_queue:
-      concurrency: 2
+      concurrency: 1
       optimize: True
     submission_reprocessing_queue:
-      concurrency: 2
+      concurrency: 1
     reminder_case_update_queue:
       pooling: gevent
-      concurrency: 5
+      concurrency: 1
     reminder_queue:
       pooling: gevent
-      concurrency: 5
-    reminder_rule_queue,ucr_indicator_queue,ucr_queue:
-      concurrency: 10
+      concurrency: 1
+    reminder_rule_queue:
+      concurrency: 3
+    ucr_queue:
+      concurrency: 4
+    ucr_indicator_queue:
+      concurrency: 2
     sms_queue:
       pooling: gevent
+      concurrency: 1
+    async_restore_queue:
+      concurrency: 8
+    repeat_record_queue:
+      pooling: gevent
       concurrency: 10
+    logistics_reminder_queue:
+      concurrency: 2
+    logistics_background_queue:
+      concurrency: 2
+    send_report_throttled:
+      concurrency: 2
+    sumologic_logs_queue:
+      pooling: gevent
+      concurrency: 50
+
 pillows:
-  echis_server0:
+  echis_server2:
     CacheInvalidatePillow:
       num_processes: 6
     DefaultChangeFeedPillow:
@@ -45,7 +74,6 @@ pillows:
       num_processes: 1
     SqlSMSPillow:
       num_processes: 1
-  echis_server2:
     UnknownUsersPillow:
       num_processes: 2
     UpdateUserSyncHistoryPillow:
