--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -4,8 +4,8 @@
 [echis_server0:vars]
 public_ip=213.55.85.203
 kafka_broker_id=1
-replication_slot='standby'
-hot_standby_master='172.19.3.40'
+#replication_slot='standby'
+#hot_standby_master='172.19.3.40'
 elasticsearch_node_name=es0
 
 [echis_server1]
@@ -15,7 +15,8 @@ elasticsearch_node_name=es0
 elasticsearch_node_name=es1
 kafka_broker_id=0
 postgresql_replication_slots=['standby','spare']
-hot_standby_server='172.19.3.41'
+#hot_standby_server='172.19.3.41'
+hot_standby_server='172.19.4.39'
 
 [echis_server2:vars]
 elasticsearch_node_name=es2
@@ -27,6 +28,8 @@ kafka_broker_id=2
 [echis_server3:vars]
 elasticsearch_node_name=es3
 kafka_broker_id=3
+hot_standby_master='172.19.3.40'
+replication_slot = 'standby'
 
 [echis_server3]
 172.19.4.39 hostname="echis3"
@@ -41,7 +44,8 @@ echis_server0
 echis_server1
 
 [pg_standby:children]
-echis_server0
+#echis_server0
+echis_server3
 
 [couchdb2:children]
 echis_server0
