--- a/environments/echis/fab-settings.yml
+++ b/environments/echis/fab-settings.yml
@@ -3,3 +3,5 @@ code_repo: 'https://github.com/dimagi/commcare-hq.git'
 default_branch: master
 project: 'commcare-hq'
 email_enabled: False
+py3_include_venv: True
+py3_run_deploy: True
