pillows moved to echis_server1

--- a/myplan.yml
+++ b/myplan.yml
@@ -1,3 +1,3 @@
 # myplan.yml
 target_allocation:
-  - echis_server0,echis_server1,echis_server2,echis_server3:4
+  - echis_server0,echis_server1,echis_server3:3
