--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -18,16 +18,16 @@ postgresql_replication_slots=['standby','spare']
 #hot_standby_server='172.19.3.41'
 hot_standby_server='172.19.4.39'
 
-[echis_server2:vars]
-elasticsearch_node_name=es2
-kafka_broker_id=2
+#[echis_server2:vars]
+#elasticsearch_node_name=es2
+#kafka_broker_id=2
 
-[echis_server2]
-172.19.4.38 hostname="echis2"
+#[echis_server2]
+#172.19.4.38 hostname="echis2"
 
 [echis_server3:vars]
-elasticsearch_node_name=es3
-kafka_broker_id=3
+#elasticsearch_node_name=es3
+#kafka_broker_id=3
 hot_standby_master='172.19.3.40'
 replication_slot = 'standby'
 
@@ -50,8 +50,8 @@ echis_server3
 [couchdb2:children]
 echis_server0
 echis_server1
-echis_server2
 echis_server3
+
 # nginx
 [couchdb2_proxy:children]
 echis_server0
@@ -65,7 +65,7 @@ echis_server1
 [kafka:children]
 echis_server1
 echis_server0
-echis_server2
+#echis_server2
 echis_server3
 
 [rabbitmq:children]
@@ -73,11 +73,11 @@ echis_server0
 
 # background tasks
 [celery:children]
-echis_server3
+echis_server0
 
 # change / stream processors
 [pillowtop:children]
-echis_server2
+echis_server1
 
 [formplayer:children]
 echis_server0
@@ -85,8 +85,8 @@ echis_server0
 [elasticsearch:children]
 echis_server0
 echis_server1
-echis_server2
-echis_server3
+#echis_server2
+#echis_server3
 
 # NFS drive
 [shared_dir_host:children]
