--- a/environments/echis/public.yml
+++ b/environments/echis/public.yml
@@ -58,9 +58,9 @@ localsettings:
   ALLOWED_HOSTS:
     - 172.19.3.40
     - 172.19.3.41
-    - 172.19.4.38
+#    - 172.19.4.38
     - 172.19.4.39
-  COMMCARE_HQ_NAME: 'eCHIS Server'
+  COMMCARE_HQ_NAME: 'eCHIS Portal'
   COMMCARE_NAME: 'eCHIS'
   COUCH_CACHE_DOCS: True
   COUCH_CACHE_VIEWS: True
