--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -15,24 +15,31 @@ elasticsearch_node_name=es0
 elasticsearch_node_name=es1
 kafka_broker_id=0
 postgresql_replication_slots=['standby','spare']
-#hot_standby_server='172.19.3.41'
-hot_standby_server='172.19.4.39'
+hot_standby_server='172.19.4.37'
 
-#[echis_server2:vars]
-#elasticsearch_node_name=es2
-#kafka_broker_id=2
+[echis_server2:vars]
+elasticsearch_node_name=es2
+kafka_broker_id=2
 
-#[echis_server2]
-#172.19.4.38 hostname="echis2"
+[echis_server2]
+172.19.4.33 hostname="echis2"
 
 [echis_server3:vars]
+kafka_broker_id=3
+
+[echis_server3]
+172.19.4.36 hostname="echis3"
+
+[echis_server4:vars]
 #elasticsearch_node_name=es3
-#kafka_broker_id=3
 hot_standby_master='172.19.3.40'
 replication_slot = 'standby'
 
-[echis_server3]
-172.19.4.39 hostname="echis3"
+[echis_server4]
+172.19.4.37 hostname="echis4"
+
+[echis_server5]
+172.19.4.35 hostname="echis5"
 
 [proxy:children]
 echis_server0
@@ -45,7 +52,7 @@ echis_server1
 
 [pg_standby:children]
 #echis_server0
-echis_server3
+echis_server4
 
 [couchdb2:children]
 echis_server0
@@ -65,7 +72,6 @@ echis_server1
 [kafka:children]
 echis_server1
 echis_server0
-#echis_server2
 echis_server3
 
 [rabbitmq:children]
@@ -73,11 +79,11 @@ echis_server0
 
 # background tasks
 [celery:children]
-echis_server0
+echis_server3
 
 # change / stream processors
 [pillowtop:children]
-echis_server1
+echis_server2
 
 [formplayer:children]
 echis_server0
