New machines added

--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -15,7 +15,7 @@ elasticsearch_node_name=es0
 elasticsearch_node_name=es1
 kafka_broker_id=0
 postgresql_replication_slots=['standby','spare']
-hot_standby_server='172.19.4.37'
+hot_standby_server='172.19.4.36'
 
 [echis_server2:vars]
 elasticsearch_node_name=es2
@@ -26,20 +26,28 @@ kafka_broker_id=2
 
 [echis_server3:vars]
 kafka_broker_id=3
+hot_standby_master='172.19.3.40'
+replication_slot = 'standby'
 
 [echis_server3]
 172.19.4.36 hostname="echis3"
 
 [echis_server4:vars]
-#elasticsearch_node_name=es3
-hot_standby_master='172.19.3.40'
-replication_slot = 'standby'
 
 [echis_server4]
 172.19.4.37 hostname="echis4"
 
 [echis_server5]
 172.19.4.35 hostname="echis5"
+
+[echis_server6]
+172.19.4.41 hostname="echis6"
+
+[echis_server7]
+172.19.4.42 hostname="echis7"
+
+[echis_server8]
+172.19.4.43 hostname="echis8"
 
 [proxy:children]
 echis_server0
@@ -51,8 +59,7 @@ echis_server0
 echis_server1
 
 [pg_standby:children]
-#echis_server0
-echis_server4
+echis_server3
 
 [couchdb2:children]
 echis_server0
@@ -79,7 +86,7 @@ echis_server0
 
 # background tasks
 [celery:children]
-echis_server3
+echis_server2
 
 # change / stream processors
 [pillowtop:children]
@@ -91,8 +98,6 @@ echis_server0
 [elasticsearch:children]
 echis_server0
 echis_server1
-#echis_server2
-#echis_server3
 
 # NFS drive
 [shared_dir_host:children]
