inventory file changed

--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -49,7 +49,7 @@ replication_slot = 'standby'
 [echis_server8]
 172.19.4.43 hostname="echis8"
 
-[minio]
+[minio:children]
 echis_server5
 echis_server6
 echis_server7
