--- a/src/commcare_cloud/ansible/requirements.yml
+++ b/src/commcare_cloud/ansible/requirements.yml
@@ -17,5 +17,5 @@
 #  name: ansible-logrotate
 #- src: DavidWittman.redis
 #  version: 1.2.5
-- src: atosatto.minio
-  version: 1.1.0
+#- src: atosatto.minio
+#  version: 1.1.0
