--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -50,10 +50,10 @@ replication_slot = 'standby'
 172.19.4.43 hostname="echis8"
 
 [minio:children]
-echis_server5
-echis_server6
-echis_server7
-echis_server8
+#echis_server3
+#echis_server6
+#echis_server7
+#echis_server8
 
 
 [proxy:children]
