--- a/environments/echis/proxy.yml
+++ b/environments/echis/proxy.yml
@@ -2,5 +2,5 @@ SITE_HOST: 'www.echisethiopia.org'
 nginx_max_worker_connection: 2048
 nginx_worker_rlimit_nofile : 131072 
 primary_ssl_env: "echis"
-
+#fake_ssl_cert: yes
 letsencrypt_cchq_ssl: True
