upgrade to ubuntu 18.04

--- a/environments/echis/inventory.ini
+++ b/environments/echis/inventory.ini
@@ -17,12 +17,12 @@ kafka_broker_id=0
 postgresql_replication_slots=['standby','spare']
 hot_standby_server='172.19.4.36'
 
-[echis_server2:vars]
-elasticsearch_node_name=es2
-kafka_broker_id=2
+#[echis_server2:vars]
+#elasticsearch_node_name=es2
+#kafka_broker_id=2
 
-[echis_server2]
-172.19.4.33 hostname="echis2"
+#[echis_server2]
+#172.19.4.33 hostname="echis2"
 
 [echis_server3:vars]
 kafka_broker_id=3
@@ -37,11 +37,18 @@ replication_slot = 'standby'
 [echis_server4]
 172.19.4.37 hostname="echis4"
 
+[echis_server5:vars]
+elasticsearch_node_name=es4
+
 [echis_server5]
 172.19.4.35 hostname="echis5"
 
 [echis_server6]
 172.19.4.41 hostname="echis6"
+
+[echis_server7:vars]
+elasticsearch_node_name=es3
+kafka_broker_id=4
 
 [echis_server7]
 172.19.4.42 hostname="echis7"
@@ -57,10 +64,11 @@ replication_slot = 'standby'
 
 
 [proxy:children]
-echis_server0
+echis_server5
 
 [webworkers:children]
-echis_server0
+#echis_server0
+echis_server7
 
 [postgresql:children]
 echis_server1
@@ -72,10 +80,10 @@ echis_server3
 echis_server0
 echis_server1
 echis_server3
-
+echis_server6
 # nginx
 [couchdb2_proxy:children]
-echis_server0
+echis_server5
 
 [redis:children]
 echis_server1
@@ -86,35 +94,37 @@ echis_server1
 [kafka:children]
 echis_server1
 echis_server0
-echis_server3
+echis_server7
 
 [rabbitmq:children]
-echis_server0
+echis_server7
 
 # background tasks
 [celery:children]
-echis_server2
+echis_server7
 
 # change / stream processors
 [pillowtop:children]
-echis_server2
+echis_server7
 
 [formplayer:children]
-echis_server0
+echis_server7
 
 [elasticsearch:children]
 echis_server0
 echis_server1
+echis_server7
+echis_server5
 
 # NFS drive
 [shared_dir_host:children]
-echis_server0
+echis_server7
 
 [control:children]
 echis_server0
 
 [mailrelay:children]
-echis_server0
+echis_server7
 
 [django_manage:children]
-echis_server0
+echis_server7
