--- a/.github/workflows/sample.yml
+++ b/.github/workflows/sample.yml
@@ -4,6 +4,14 @@ name: CI
 
 # Controls when the workflow will run
 on:
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags' 
   # Triggers the workflow on push or pull request events but only for the "master" branch
   push:
     branches: [ "master" ]
